added hyphens to the text colums

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
-    /> <!-- These font weights are the ones we have downloaded, so when setting font-weight in css, use one of these only -->
+    />
+    <!-- These font weights are the ones we have downloaded, so when setting font-weight in css, use one of these only -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
